[tool.poetry]
name = "gpt-line-bot"
version = "0.1.0"
description = ""
authors = ["ccc <ccc.larc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-environ = "^0.11.2"
djangorestframework = "^3.15.1"
line-bot-sdk = "^3.11.0"
openai = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
